Issue #252305 - Cannot avoid warning about a confusing indentation - fixed.